--- a/BaseFacturacion/App.config
+++ b/BaseFacturacion/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="BaseFacturacion.Properties.Settings.BaseFacturacionConnectionString"
-            connectionString="Data Source=DESKTOP-3B9U65A\SQLEXPRESS;Initial Catalog=Facturacion;Integrated Security=True"
+            connectionString="Data Source=sergioPimiento\SQLEXPRESS;Initial Catalog=Facturacion;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
